--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 # Generated files
 bin/
 gen/
-out/
+# out/
 
 # Gradle files
 .gradle/
@@ -34,8 +34,10 @@ captures/
 
 # IntelliJ
 *.iml
+.idea/modules.xml
 .idea/workspace.xml
 .idea/tasks.xml
+.idea/navEditor.xml
 .idea/gradle.xml
 .idea/assetWizardSettings.xml
 .idea/dictionaries
@@ -63,3 +65,6 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+# For Mac users
+.DS_Store
