--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,15 +46,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!-- provider
-            android:name="android.support.v4.content.FileProvider"
+        <provider
+            android:name="androidx.core.content.FileProvider"
             android:authorities="pe.edu.pucp.a20190000.rebajatuscuentas.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
-        </provider -->
+        </provider>
     </application>
 
 </manifest>
