--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <activity
             android:name=".features.inmovable.create.InmovableCreateActivity"
             android:label="@string/inm_create_txt_title"
-            android:parentActivityName=".features.inmovable.list.InmovableListActivity" />
+            android:parentActivityName=".features.home.HomeActivity" />
         <activity
             android:name=".features.home.HomeActivity"
             android:label="@string/home_txt_title" />
